Aulas da 2 ao 5 completas

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <title>Shooter game nave</title>
 </head>
 <body>
-   <div ids="main-play-area">
-       <img src="img/hero.png" alt="" srcset="">
+   <div id="main-play-area">
+       <img class="player-shooter" src="img/hero.png" alt="" srcset="">
    </div> 
 
 <script src="js/script.js"></script> 
-<script></script>   
+<script>
+    const game = new Game();
+</script>   
 </body>
 </html>
