Parte 5 ao final

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
    <div id="main-play-area">
        <img class="player-shooter" src="img/hero.png" alt="" srcset="">
+       <h4 class="game-instrutions">
+           Não deixe os inimigos invadirem o seu planeta!
+       </h4>
+       <div class="start-buttom" onclick="game.playGame()">
+           Start
+       </div>
    </div> 
 
 <script src="js/script.js"></script> 
